@@ -36,7 +36,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.regex.Matcher;
@@ -79,6 +78,7 @@ import org.hisp.dhis.user.CurrentUserService;
 import org.hisp.dhis.user.User;
 import org.hisp.dhis.user.UserGroupService;
 import org.hisp.dhis.user.UserService;
+import org.hisp.dhis.user.sharing.Sharing;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
@@ -112,9 +112,9 @@ public class DefaultFieldFilterService implements FieldFilterService
 
     private final Set<NodeTransformer> nodeTransformers;
 
-    private Map<String, Preset> presets = Map.of();
+    private ImmutableMap<String, Preset> presets = ImmutableMap.of();
 
-    private Map<String, NodeTransformer> transformers = Map.of();
+    private ImmutableMap<String, NodeTransformer> transformers = ImmutableMap.of();
 
     private Property baseIdentifiableIdProperty;
 
@@ -385,10 +385,12 @@ public class DefaultFieldFilterService implements FieldFilterService
             ((BaseIdentifiableObject) object).setAccess( access );
         }
 
-        if ( fieldMap.containsKey( "attribute" ) && AttributeValue.class.isAssignableFrom( object.getClass() ) )
+        if ( Sharing.class.isAssignableFrom( object.getClass() ) )
         {
-            AttributeValue attributeValue = (AttributeValue) object;
-            attributeValue.setAttribute( attributeService.getAttribute( attributeValue.getAttribute().getUid() ) );
+            Sharing sharing = (Sharing) object;
+            sharing.getUsers().values().forEach( u -> u.setDisplayName( userService.getDisplayName( u.getId() ) ) );
+            sharing.getUserGroups().values()
+                .forEach( ug -> ug.setDisplayName( userGroupService.getDisplayName( ug.getId() ) ) );
         }
 
         for ( String fieldKey : fieldMap.keySet() )
